Fix hang analyzer JS integration in dynamic builds

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.7.0
    • Affects Version/s: None
    • Component/s: Build
    • None
    • Fully Compatible
    • ALL
    • Dev Platform 2020-06-01
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      We have observed that the kCurrentScope variable sometimes retains a reference to a destroyed ImplScope in dynamic builds. A fix was identified in the code review for SERVER-46296, but that work is blocked on startup performance. This ticket exists to split the fix out from the SERVER-46296 work so we can commit just the fix for the handlign of kCurrentScope.

            Assignee:
            Andrew Morrow (Inactive)
            Reporter:
            Andrew Morrow (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: