SERVER-48266 Improve handling of kCurrentScope for the benefit of the hang analyzer